# learning2/server.js
@@ -2,8 +2,8 @@ var express = require('express');
 var app = express();
 var fs = require("fs");
 
-app.get('/listContacts', function (req, res) {
-   fs.readFile( __dirname + "/" + "Contacts.json", 'utf8', function (err, data) {
+app.get('/listAnimals', function (req, res) {
+   fs.readFile( __dirname + "/" + "Animals.json", 'utf8', function (err, data) {
       console.log( data );
       res.end( data );
    });
